<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure you entered your username, password and email</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you entered your username, password</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Log out</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="logar_text">Logar</string>
    <string name="login_text">Login</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry but there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_to_large">The selected file is too large! Please select another.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Image</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>

</resources>
